--- a/css/kasper.css
+++ b/css/kasper.css
@@ -1036,10 +1036,16 @@ header nav .form i {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
   }
+  @media (max-width: 767px) {    
+      .contact .main-heading p {
+        margin: 0 auto 50px;
+    }
+  }
   .contact .content {
     display: flex;
     justify-content: space-between;
   }
+  
   @media (max-width: 767px) {
     .contact .content {
       flex-direction: column;
